fix: mobile overflow issue

--- a/src/modules/Home/Home.module.scss
+++ b/src/modules/Home/Home.module.scss
@@ -1,2 +1,5 @@
-.container {
+.home {
+  &-client-showcase {
+    margin-bottom: 4rem;
+  }
 }
