--- a/src/shared/components/Header/Header.module.scss
+++ b/src/shared/components/Header/Header.module.scss
@@ -6,6 +6,8 @@
   align-items: center;
   justify-content: space-between;
 
+  width: 100vw;
+
   border-bottom: 1px solid $grey-3;
   background-color: $primary-color;
 
