--- a/src/shared/components/Layout/Layout.module.scss
+++ b/src/shared/components/Layout/Layout.module.scss
@@ -3,5 +3,6 @@
 .layout {
   &-main {
     padding-bottom: $footer-height;
+    width: 100vw;
   }
 }
