--- a/src/shared/styles/globals.scss
+++ b/src/shared/styles/globals.scss
@@ -41,6 +41,11 @@ body {
 
   position: relative;
   min-height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
+
+  display: flex;
+  flex-direction: column;
 }
 
 a {
